--- a/vintage.css
+++ b/vintage.css
@@ -436,7 +436,7 @@ margin-top: 3.5%;
     box-shadow: -1px 1px 10px black;
     border-radius: 5px;
     position: absolute;
-    top:107%;
+    top: 50rem;
     left:30%;
     font-family: 'Raleway', sans-serif; 
     text-align: center;
@@ -476,7 +476,7 @@ margin-top: 3.5%;
     box-shadow: -1px 1px 10px black;
     border-radius: 5px;
     position: absolute;
-    top:107%;
+    top:50rem;
     left:9%;
     font-family: 'Raleway', sans-serif; 
 cursor: pointer;
