--- a/formatura.css
+++ b/formatura.css
@@ -436,7 +436,7 @@ margin-top: 3.5%;
     border-radius: 5px;
     position: absolute;
     top:80%;
-    left:30%;
+    left:30rem;
     font-family: 'Raleway', sans-serif; 
     text-align: center;
 
@@ -475,7 +475,7 @@ margin-top: 3.5%;
     box-shadow: -1px 1px 10px black;
     border-radius: 5px;
     position: absolute;
-    top:80%;
+    top:30rem;
     left:9%;
     font-family: 'Raleway', sans-serif; 
     cursor: pointer;
