--- a/shakira.css
+++ b/shakira.css
@@ -437,7 +437,7 @@ margin-top: 3.5%;
     box-shadow: -1px 1px 10px black;
     border-radius: 5px;
     position: absolute;
-    top:110%;
+    top:90rem;
     left:30%;
     font-family: 'Raleway', sans-serif; 
     text-align: center;
@@ -477,7 +477,7 @@ margin-top: 3.5%;
     box-shadow: -1px 1px 10px black;
     border-radius: 5px;
     position: absolute;
-    top: 110%;
+    top: 90rem;
     left:9%;
     font-family: 'Raleway', sans-serif; 
 cursor: pointer;
