--- a/formatura.css
+++ b/formatura.css
@@ -2,7 +2,6 @@
   @import url('https://fonts.googleapis.com/css2?family=Bellota+Text&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@500&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Red+Rose&display=swap');
-
   @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 
 
@@ -102,7 +101,7 @@ ul li.item-menu a .im{
     
 }
 
- /* ---------------------------------------cabeçalho---------------------------------------------- */
+ /* ---------------------------------------CABEÇALHO---------------------------------------------- */
  .container{
    
     margin-top: 10px;
@@ -159,7 +158,7 @@ ul li.item-menu a .im{
     
 }
 
-/* ----------------------------------------capa----------------------------------------  */
+/* ----------------------------------------CAPA----------------------------------------  */
 
 #form{
     background-image: url(ims/form.png);
@@ -173,7 +172,7 @@ ul li.item-menu a .im{
 }
 
 
-/* ________________________Alinhar as Divs de descrição e mapa______________________________ */
+/* ________________________DESCRIÇÕES DO EVENTO E MAPA______________________________ */
 
 .geral{
     display: flex;
@@ -219,7 +218,7 @@ margin-top: 3.5%;
     margin-left: 200px;
 }
 
-/* --------------------------------------Carrinho----------------------------------- */
+/* --------------------------------------CARRINHO DE COMPRAS----------------------------------- */
 
 .shopping-cart .sum-prices {
     display: flex;
@@ -482,7 +481,7 @@ margin-top: 3.5%;
   }
   
 
-/* --------------------------------------select----------------------------------- */
+/* --------------------------------------SELEÇÃO CARRINHO----------------------------------- */
 
 
 .box {
@@ -543,7 +542,7 @@ option :hover {
 
 
 
-/*----------------- carrossel----------------- */
+/*--------------------------------------- CARROSSEL---------------------------------------- */
 
 
 .conteiner{
